--- a/ClinicaVeterinaria/ClinicaVeterinaria.csproj
+++ b/ClinicaVeterinaria/ClinicaVeterinaria.csproj
@@ -96,12 +96,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControlAnimal.cs" />
+    <Compile Include="ControlConsulta.cs" />
     <Compile Include="ControlEndereco.cs" />
+    <Compile Include="ControlMedicamento.cs" />
     <Compile Include="ControlMenu.cs" />
     <Compile Include="ControlRaca.cs" />
+    <Compile Include="ControlTutor.cs" />
     <Compile Include="DAOAnimal.cs" />
+    <Compile Include="DAOConsulta.cs" />
     <Compile Include="DAOEndereco.cs" />
+    <Compile Include="DAOMedicamento.cs" />
     <Compile Include="DAORaca.cs" />
+    <Compile Include="DAOTutor.cs" />
     <Compile Include="DAOVeterinario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
